[package]
name = "World-Maker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rust"
crate-type = ["cdylib"]

[dependencies]
rand = "0.7.3"
rand_distr = "0.3.0"
pyo3 = { version = "0.21.2", features = ["extension-module"] }